[package]
name = "lla"
version = "0.1.7"
edition = "2021"
description = "A lightweight ls replacement"
authors = ["Achaq <hi@achaq.dev>"]
license = "MIT"
repository = "https://github.com/triyanox/lla"
keywords = ["cli", "ls", "lightweight"]
categories = ["command-line-utilities"]
exclude = ["lla.png"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
termion = "2.0.1"
users = "0.11.0"
chrono = "0.4.26"
git2 = "0.17.2"
