[package]
name = "lla"
version.workspace = true
edition.workspace = true
description = "A lightweight ls replacement"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cli", "ls", "lightweight"]
categories = ["command-line-utilities"]
exclude = ["lla.png"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
colored.workspace = true
rayon.workspace = true
chrono.workspace = true
libloading.workspace = true
serde_json.workspace = true
walkdir.workspace = true
tempfile.workspace = true
users.workspace = true
parking_lot.workspace = true
lla_plugin_interface = { version = "0.2.10", path = "../lla_plugin_interface" }
once_cell.workspace = true
dashmap.workspace = true
unicode-width.workspace = true
strip-ansi-escapes.workspace = true
terminal_size.workspace = true
dialoguer.workspace = true
atty.workspace = true
indicatif.workspace = true
console.workspace = true
