[package]
name = "lla_plugin_interface"
description = "Interface for lla plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cli", "ls", "lightweight"]
categories = ["command-line-utilities"]
exclude = ["docs"]

[dependencies]
