[package]
name = "lla_plugin_interface"
description = "Interface for lla plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cli", "ls", "lightweight"]
categories = ["command-line-utilities"]
exclude = ["docs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
bytes = "1.5"

[build-dependencies]
prost-build = "0.12"
