[package]
name = "lla_plugin_utils"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lla_plugin_interface = { path = "../lla_plugin_interface" }
serde = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
prost = { workspace = true }
bytes = "1.5.0"
chrono = { workspace = true }
users = { workspace = true }
indicatif = { workspace = true }
console = "0.15.8"

[features]
default = ["config", "ui", "format"]
config = []
ui = []
format = []
