[package]
name = "lla_plugin_utils"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lla_plugin_interface = { path = "../lla_plugin_interface" }
serde = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
prost = { workspace = true }
bytes = "1.5.0"
chrono = { workspace = true }
users = { workspace = true }
indicatif = { workspace = true }
console = "0.15.8"
syntect = { version = "5.1.0", optional = true }
lazy_static = { version = "1.4", optional = true }
dialoguer = { version = "0.11.0", optional = true }

[features]
default = ["config", "ui", "format", "syntax", "interactive"]
config = []
ui = []
format = []
syntax = ["syntect", "lazy_static"]
interactive = ["dialoguer"]
