[package]
name = "categorizer"
description = "Categorizes files based on their extensions and metadata"
version = "0.3.1"
edition = "2021"

[dependencies]
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
colored = "2.0"
prost = "0.12"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
parking_lot = "0.12"
toml = "0.8"
dirs = "5.0"

[lib]
crate-type = ["cdylib"]
