[package]
name = "code_snippet_extractor"
description = "A plugin for extracting and managing code snippets"
version = "0.3.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
dirs = "5.0.1"
base64 = { version = "0.22.1", features = ["std"] }
ring = "0.17.8"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
prost = "0.12"
bytes = "1.5"

[lib]
crate-type = ["cdylib"]
