[package]
name = "code_snippet_extractor"
version = "0.3.1"
edition = "2021"
description = "Extract and manage code snippets with tagging support"

[dependencies]
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
colored = "2.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
ring = "0.17"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
syntect = "5.1"
lazy_static = "1.4"
parking_lot = "0.12"
dialoguer = "0.11.0"
fuzzy-matcher = "0.3.7"
arboard = "3.3.0"
serde_json = "1.0"
console = "0.15.7"

[lib]
crate-type = ["cdylib"]
