[package]
name = "dirs"
description = "Shows directories metadata"
version = "0.2.1"
edition = "2021"

[dependencies]
colored = "2.0.0"
walkdir = "2.3.2"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
rayon = "1.8"
lazy_static = "1.4"
parking_lot = "0.12"

[lib]
crate-type = ["cdylib"]
