[package]
name = "dirs_meta"
description = "Analyzes directories and shows metadata"
version = "0.3.1"
edition = "2021"

[dependencies]
colored = { workspace = true }
walkdir = { workspace = true }
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
rayon = { workspace = true }
lazy_static = "1.4"
parking_lot = { workspace = true }
prost = { workspace = true }
bytes = "1.5"
serde = { workspace = true, features = ["derive"] }

[lib]
crate-type = ["cdylib"]
