[package]
name = "duplicate_file_detector"
description = "A plugin for the LLA that detects duplicate files."
version = "0.2.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
sha2 = "0.10.8"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
prost = "0.12"
bytes = "1.5"
[lib]
crate-type = ["cdylib"]
