[package]
name = "file_copier"
version = "0.1.0"
edition = "2021"
description = "A plugin for lla that provides clipboard functionality for copying files and directories"

[lib]
crate-type = ["cdylib"]

[dependencies]
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
colored = "2.0"
lazy_static = "1.4"
parking_lot = "0.12"
dirs = "5.0"
