[package]
name = "file_meta"
description = "Displays the file metadata of each file"
version = "0.3.0"
edition = "2021"

[dependencies]
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
chrono = "0.4.38"
colored = "2.0"
prost = "0.12"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
parking_lot = "0.12"

[lib]
crate-type = ["cdylib"]
