[package]
name = "file_tagger"
description = "A plugin for tagging files and filtering by tags"
version = "0.3.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
dirs = "5.0.1"
prost = "0.12"
bytes = "1.5"

[lib]
crate-type = ["cdylib"]
