[package]
name = "keyword_search"
description = "Searches file contents for user-specified keywords"
version = "0.2.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.8"
regex = "1.11.1"
prost = "0.12"
bytes = "1.5"

[lib]
crate-type = ["cdylib"]
