[package]
name = "keyword_search"
description = "Searches file contents for user-specified keywords"
version = "0.3.1"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.8"
regex = "1.11.1"
prost = "0.12"
bytes = "1.5"
lazy_static = "1.4"
parking_lot = "0.12"
dialoguer = "0.11.0"
console = "0.15.7"
syntect = "5.1"
chrono = "0.4"
arboard = "3.3.0"
itertools = "0.12.0"
strip-ansi-escapes = "0.2.0"

[lib]
crate-type = ["cdylib"]
