[package]
name = "last_git_commit"
description = "A plugin for the LLA that provides the last git commit hash"
version = "0.3.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
prost = "0.12"
bytes = "1.5"

[lib]
crate-type = ["cdylib"]
