[package]
name = "last_git_commit"
description = "A plugin for the LLA that provides the last git commit hash"
version = "0.3.1"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
prost = "0.12"
bytes = "1.5"
lazy_static = "1.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
